--- a/animations/animations.html
+++ b/animations/animations.html
@@ -4,41 +4,36 @@
     <link rel="stylesheet" href="styles.css">
 <head>
     
-    <title>TTN</title>
+    <title>TTN - Anims</title>
 
 </head>
 <body>
 <div class="myHdr">
-     <!--Mr. Noobert's Deep Dark Dumb Domain-->
+     Animations / Math Visualizations
 </div>
-<script src="hdrScr.js"></script>
 <div class="navBar">
 
     <div class="btnHolder">
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
 
     </div><div class="btnHolder">
-    <a href="games/games.html">Games</a>
+    <a href="../games/games.html">Games</a>
 
     </div><div class="btnHolder">
-    <a href="animations/animations.html">Animations</a>
+    <a href="../animations/animations.html">Animations</a>
 
     </div><div class="btnHolder">
-    <a href="games/games.html">Blog</a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Blog</a>
 
     </div><div class="btnHolder">
-    <a href="other/other.html">Other</a>
+    <a href="../other/other.html">Other</a>
 
     </div>
 </div>
 
 
-<!--<div class="RemArea">
-    
-</div>-->
-
-
-
+<p>
+Coming Soon™
+</p>
 </body>
-
 </html>
