--- a/games/games.html
+++ b/games/games.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+    <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="styles.css">
 <head>
     
@@ -43,14 +44,17 @@
         <img src="images/connect4.png" alt="Connect 4">
     </a></div>
 
+
+    <div class="ImageContainer">     
+        <a href="cube/cube.html">
+        <img src="images/cube.png" alt="Connect 4">
+    </a></div>
+
     <div class="ImageContainer">
     <!--  <p><a href="poker/poker.html">  -->
     <img src="images/poker.png" alt="Poker">
     <!--  </a></p>  --></div>
 
 </div>
-
-
 </body>
-
 </html>
