--- a/animations/animations.html
+++ b/animations/animations.html
@@ -3,14 +3,17 @@
 <html>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="styles.css">
+        
+    <script src="btnColor.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
+    <!--<script src="animScripts/radar.js"></script>-->
+    <script src="animations.js"></script>
 <head>
-    
     <title>TTN - Anims</title>
-
 </head>
 <body>
 <div class="myHdr">
-     Animations / Math Visualizations
+     ...
 </div>
 <div class="navBar">
 
@@ -31,10 +34,19 @@
 
     </div>
 </div>
-
-
-<p>
-Coming Soon™
-</p>
+<div class="canvasContainer">
+    <canvas id="canv1" class="animCanvas"></canvas>
+    <canvas id="canv2" class="animCanvas"></canvas>
+    <canvas class="animCanvas"></canvas>
+    <canvas class="animCanvas"></canvas>
+    <canvas class="animCanvas"></canvas>
+    <canvas class="animCanvas"></canvas>
+    <canvas class="animCanvas"></canvas>
+    <canvas class="animCanvas"></canvas>
+    <canvas class="animCanvas"></canvas>
+    <canvas class="animCanvas"></canvas>
+</div>
+<p id="output1"></p>
+<p id="output2"></p>
 </body>
 </html>
