--- a/animations/animations.html
+++ b/animations/animations.html
@@ -37,14 +37,14 @@
 <div class="canvasContainer">
     <canvas id="canv1" class="animCanvas"></canvas>
     <canvas id="canv2" class="animCanvas"></canvas>
-    <canvas class="animCanvas"></canvas>
-    <canvas class="animCanvas"></canvas>
-    <canvas class="animCanvas"></canvas>
-    <canvas class="animCanvas"></canvas>
-    <canvas class="animCanvas"></canvas>
-    <canvas class="animCanvas"></canvas>
-    <canvas class="animCanvas"></canvas>
-    <canvas class="animCanvas"></canvas>
+    <canvas id="canv3" class="animCanvas"></canvas>
+    <canvas id="canv4" class="animCanvas"></canvas>
+    <canvas id="canv5" class="animCanvas"></canvas>
+    <canvas id="canv6" class="animCanvas"></canvas>
+    <canvas id="canv7" class="animCanvas"></canvas>
+    <canvas id="canv8" class="animCanvas"></canvas>
+    <canvas id="canv9" class="animCanvas"></canvas>
+    <canvas id="canv10" class="animCanvas"></canvas>
 </div>
 <p id="output1"></p>
 <p id="output2"></p>
