add tetris game to games page

--- a/games/games.html
+++ b/games/games.html
@@ -36,7 +36,7 @@
 <div class="ListContainer">
     <div class="ImageContainer">
         <a href="tictactoe/tictactoe.html">
-        <img src="images/tictactoe.png" alt="Tic-Tac-Tie">
+        <img src="images/tictactoe.png" alt="Tic-Tac-Toe">
         </a></div>
 
     <div class="ImageContainer">     
@@ -47,8 +47,14 @@
 
     <div class="ImageContainer">     
         <a href="cube/cube.html">
-        <img src="images/cube.png" alt="Connect 4">
+        <img src="images/cube.png" alt="Cube">
     </a></div>
+    
+    <div class="ImageContainer">     
+        <a href="tetris/tetris.html">
+        <img src="images/tetris.png" alt="Tetris">
+    </a></div>
+    
 
     <div class="ImageContainer">
     <!--  <p><a href="poker/poker.html">  -->
