--- a/games/tetris/tetris.html
+++ b/games/tetris/tetris.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/addons/p5.sound.min.js"></script>
     <div id = canvCont class = "canvas-container">
         <!--<canvas id="myCanvas" width="700" height="700"></canvas>-->
     </div>
