--- a/games/games.html
+++ b/games/games.html
@@ -54,7 +54,11 @@
         <a href="tetris/tetris.html">
         <img src="images/tetris.png" alt="Tetris">
     </a></div>
-    
+
+    <div class="ImageContainer">     
+        <a href="paint/paint.html">
+        <img src="images/paint.png" alt="Tetris">
+    </a></div>
 
     <div class="ImageContainer">
     <!--  <p><a href="poker/poker.html">  -->
