--- a/games/games.html
+++ b/games/games.html
@@ -57,7 +57,7 @@
 
     <div class="ImageContainer">     
         <a href="paint/paint.html">
-        <img src="images/paint.png" alt="Tetris">
+        <img src="images/paint.png" alt="paint">
     </a></div>
 
     <div class="ImageContainer">
