add 'block' to games page

--- a/games/games.html
+++ b/games/games.html
@@ -60,6 +60,11 @@
         <img src="images/paint.png" alt="paint">
     </a></div>
 
+    <div class="ImageContainer">     
+        <a href="block/block.html">
+        <img src="images/block.png" alt="block">
+    </a></div>
+
     <div class="ImageContainer">
     <!--  <p><a href="poker/poker.html">  -->
     <img src="images/poker.png" alt="Poker">
