--- a/games/tictactoe/tictactoe.html
+++ b/games/tictactoe/tictactoe.html
@@ -13,13 +13,11 @@
     
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
 
-    <div class = "canvas-container">
-        <canvas id="myCanvas" width="300" height="300"></canvas>
+    <div id = canvCont class = "canvas-container">
+        <!--<canvas id="myCanvas" width="700" height="700"></canvas>-->
     </div>
-    <script src="script.js"></script>
+    <script src="tictactoe.js"></script>
 
-    <p id="output">Player 1 Turn</p>
-    <button id="rBtn" onclick="resetFunc()">Reset Game</button>
 </body>
 
 </html>
