--- a/games/games.html
+++ b/games/games.html
@@ -65,6 +65,11 @@
         <img src="images/block.png" alt="block">
     </a></div>
 
+    <div class="ImageContainer">     
+        <a href="breakout/breakout.html">
+        <img src="images/breakout.png" alt="block">
+    </a></div>
+
     <div class="ImageContainer">
     <!--  <p><a href="poker/poker.html">  -->
     <img src="images/poker.png" alt="Poker">
